Fixed jumping issues when sine wave is situated at the first or last view along the hint path and these views are encountered during dragging, however it is still jumping at the point when dragging starts from either of these views

--- a/d3 Prototyping/CSS/barchartStyles.css
+++ b/d3 Prototyping/CSS/barchartStyles.css
@@ -7,11 +7,14 @@ body {
 
 /*Labels on the hint path */
 .hintLabels {
+  /**font-family: verdana;*/
   font-family: sans-serif;
-  font-size:11px;
+  font-size:12px;
   text-anchor:middle;
   fill:#666;
   cursor:pointer;
+  /**stroke-width:0.25; This effect looks strange..
+  stroke:#FFF;*/
 }
 /*The hint path*/
 #path{
